[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["RaneemAbdulazez <raneem97su@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
bs4 = "^0.0.1"
ipykernel = "^5.5.5"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
